# shortly

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: shortly.db
src/: main.py
src/domain/: exceptions.py  short_code_generator.py
src/infrastructure/: database.py
src/models/: urls.py
src/repositories/: unit_of_work.py  url_repository.py
src/repositories/sqlalchemy/: unit_of_work_sqlalchemy.py  url_repository_sqlalchemy.py
src/routers/: urls_router.py
src/schemas/dto/: url_dto.py
src/services/: url_shortener_service.py
tests/e2e/: urls_router_test.py
tests/integrations/: unit_of_work_sqlalchemy_test.py
tests/units/: short_code_generator_test.py  short_url_service_test.py
