[tool.poetry]
name = "shortly"
version = "0.1.0"
description = "Minimal url shortener service"
authors = ["e.kutilov <kutilov.egor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.27.0"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^7.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
